# GroneStatz

./: .env.prod.example  .gitignore  LICENSE  README.md  _bulk_tmp.py  _filter_fantasy_no_image.py  _recalc_fantasy_prices.py  docker-compose.prod.yml  docker-compose.qa.yml  pyproject.toml  requirements.txt  setup.py  tmp_ranking.html  tmp_ranking_chunk.js  top10_similares_a_noriega.csv
FantasyL1-2026/: .env.example  .env.prod.example  .env.qa  .env.test  DEPLOYMENT_PROD.md  MOBILE_QA_CHECKLIST.md  MOBILE_RELEASE.md  README.md  REPORT_LINKEDIN_ES.md  docker-compose.yml
data/: Datos_totales_Liga1_2025_limpio.xlsx  Jugadores_Datos_totales_Liga 1 Peru_2025.xlsx  top10_similares_Erick_Noriega.xlsx
docs/: gronestatz_data_pipeline_plan.md
gronestats/: data_layout.py
logs/: matches_details_errors_Liga 1 Peru_2024.txt
notebooks/: Datos_totales_Liga 1 Peru_2025.xlsx  Jugadores_Datos_totales_Liga 1 Peru_2025.xlsx  Partidos_Liga 1 Peru_2022.xlsx  Partidos_Liga 1 Peru_2023.xlsx  Partidos_Liga 1 Peru_2024.xlsx  Partidos_Liga 1 Peru_2025_limpio.xlsx  Partidos_detalles_faltantes_2025.xlsx  Partidos_detalles_faltantes_Liga 1 Peru_2025.xlsx  nb_01_obtener_partidos_liga_anual.ipynb  nb_02_limpiar_partidos.ipynb  nb_03_detallar_partidos.ipynb  nb_04_obtener_stats_jugadores_liga_anual.ipynb  nb_05_extraer_partido_por_match_id.ipynb  nb_scraperfc_complete_league.ipynb  nb_scraperfc_complete_matches.ipynb  nb_scraperfc_league_matches.ipynb  nb_scraperfc_players.ipynb  nb_scraperfc_test.ipynb
scripts/: get_all_season_match_info.py  indicedelcampeon.py  liga1_2025_puntosxjornada.xlsx  (+8 more)
(+3220 files in other folders)
